# ddns-sync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yml  requests.http
cloudflare/: DNS Record.bru  Zones.bru  collection.bru
cloudflare-adapter/: Cargo.toml
cloudflare-adapter/src/: error.rs  lib.rs  prelude.rs
cloudflare-adapter/src/api/: client.rs  dns.rs  dto.rs  mod.rs  token.rs  zone.rs
cloudflare/environments/: cloudflare-api.bru
src/: cloudflare.rs  config.rs  ip_discovery.rs  ip_lookup.rs  main.rs  state.rs
src/utils/: display.rs  mod.rs
