[package]
name = "ddns-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.113"
serial_test = "3.0.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.57"
anyhow = "1.0.79"
