[package]
name = "ddns-sync"
description = "Utility to periodictly update A and AAAA records"
version = "0.1.0"
edition = "2021"
authors = ["Szymon Kozioł <contact@critteros.dev>"]

[workspace]
members = [
    "cloudflare-adapter",
]

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.113"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.57"
clap = { version = "4.5.0", features = ["derive", "env"] }
dotenv = "0.15.0"
cloudflare-adapter = { path = "cloudflare-adapter" }

[dev-dependencies]
mockito = "1.2.0"
rstest = "0.20.0"
